# research-workflow-assistant

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt  versions.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/agents/: academic-writer.agent.md  critical-reviewer.agent.md  data-analyst.agent.md  developer.agent.md  project-manager.agent.md  release-manager.agent.md  research-orchestrator.agent.md  research-planner.agent.md  setup-wizard.agent.md  setup.agent.md  systematic-reviewer.agent.md  troubleshooter.agent.md  verification-coordinator.agent.md
.github/workflows/: release.yml  validate.yml
analysis-templates/R/: cite-r-packages.qmd  summary-table.qmd
analysis-templates/python/: cite-python-packages.qmd
compliance/: ai-disclosure-template.md  cochrane-rob2-template.md  icmje-authorship-checklist.md  moose-checklist.md  prisma-2020-checklist.md  prisma-scr-checklist.md  user-disclaimer.md
csl/: README.md
docs/: api-setup-guide.md  architecture-diagram.html  architecture-diagram.md  architecture-diagram.qmd  architecture.md  conversation-export.md  database-access.md  getting-started.md  posit-quarto-guide.md  quick-start.md  rwa-architecture.mmd  zotero-plugins-guide.md
docs/web-ui/: requirements.md
docs/web-ui/implementation-guide/: 00-Overview.md  01-Repository-Structure-And-Tooling.md  02-Configuration-And-Environment.md  03-Application-Database.md  04-Project-Storage.md  05-Authentication-And-User-Identity.md  06-Project-Lifecycle.md  07-Shared-Service-Layer.md  08-Job-System.md  09-Search-Workflow.md  10-PRISMA-Tracking.md  11-Documents-And-Protocol-Workflow.md  12-Bibliography-And-Citation-Support.md  13-Audit-Trail-And-Human-Approval.md  14-Next.js-User-Interface.md  15-MCP-Compatibility-Refactor.md  16-Testing-And-Verification.md  17-Local-Development-And-Deployment.md
mcp-servers/_shared/: pyproject.toml
mcp-servers/_shared/src/rwa_chat_parser/: __init__.py  models.py  parser.py  renderer.py
mcp-servers/_shared/src/rwa_result_store/: __init__.py  bibliography_sync.py  script_templates.py  search_runners.py
mcp-servers/bibliography-manager/: pyproject.toml
mcp-servers/bibliography-manager/src/bibliography_manager/: __main__.py  server.py
mcp-servers/chat-exporter/: pyproject.toml
mcp-servers/chat-exporter/src/chat_exporter/: server.py
mcp-servers/crossref-server/: pyproject.toml
mcp-servers/crossref-server/src/crossref_server/: __main__.py  server.py
mcp-servers/crossref-server/src/sample_projects/chw-maternal-mental-health/data/: search_results.db
mcp-servers/europe-pmc-server/: pyproject.toml
mcp-servers/europe-pmc-server/src/europe_pmc_server/: __main__.py  server.py
mcp-servers/openalex-server/: pyproject.toml
mcp-servers/openalex-server/src/openalex_server/: __main__.py  server.py
mcp-servers/openalex-server/src/sample_projects/chw-maternal-mental-health/data/: search_results.db
mcp-servers/prisma-tracker/: pyproject.toml
mcp-servers/prisma-tracker/src/prisma_tracker/: __main__.py  server.py
mcp-servers/prisma-tracker/src/sample_project/review-tracking/: prisma-flow.json
mcp-servers/prisma-tracker/src/sample_projects/chw-maternal-mental-health/review-tracking/: prisma-flow.json
mcp-servers/project-tracker/: pyproject.toml
mcp-servers/project-tracker/src/project_tracker/: __main__.py  server.py
mcp-servers/pubmed-server/: pyproject.toml
mcp-servers/pubmed-server/src/pubmed_server/: __init__.py  __main__.py  server.py
mcp-servers/semantic-scholar-server/: pyproject.toml
mcp-servers/semantic-scholar-server/src/sample_projects/chw-maternal-mental-health/data/: search_results.db
mcp-servers/semantic-scholar-server/src/semantic_scholar_server/: __main__.py  server.py
mcp-servers/zotero-local-server/: pyproject.toml
mcp-servers/zotero-local-server/src/zotero_local_server/: __main__.py  pdf_reader.py  server.py  zotero_db.py
mcp-servers/zotero-server/: pyproject.toml
mcp-servers/zotero-server/src/zotero_server/: __main__.py  server.py
mcp-servers/zotero-server/tests/: test_user_id_resolution.py
my_projects/latent-syphilis-bpg-dosing-review/scripts/: fetch_pmcids.py
sample_project/: README.md  ai-contributions-log.md  decision-log.qmd  literature-review-evidence.md  manuscript.qmd  meeting-notes.qmd  meta-analysis.qmd  prisma-flow.qmd  progress-brief.qmd  project-config.yaml  protocol.qmd  references.bib  search-strategy.qmd
sample_projects/chw-maternal-mental-health/: ai-contributions-log.md  data-extraction.qmd  literature-review-evidence.md  manuscript.docx  manuscript.html  manuscript.qmd  project-config.yaml  protocol.qmd  references.bib  rob2-assessments.qmd  synthesis.qmd
sample_projects/chw-maternal-mental-health/chat-logs/: session-2026-03-14-systematic-review-workflow-orchestration-guidance.html  (+1 more)
scripts/: _upload_pdfs.py  _upload_pdfs2.py  backfill_search_exports.py  export_chat_session.py  fetch_pmcids.py  mcp_smoke_check.py  release.py  test_new_features.py  validate_setup.py
src/research_workflow_assistant/: __init__.py
templates/: portable-mcp-config.json  project-config.yaml  research-workspace.code-workspace.example  rwa-citation.bib
templates/critical-appraisal/: casp-qualitative.qmd  casp-rct.qmd  cross-study-summary.qmd  strobe-observational.qmd
templates/manuscript/: imrad.qmd
templates/project-management/: decision-log.qmd  meeting-notes.qmd  progress-brief-simple.md  progress-brief.qmd
templates/report/: report.qmd
templates/systematic-review/: literature-review-evidence.md  manuscript.qmd  prisma-flow.qmd  protocol.qmd  search-strategy.qmd
templates/verification/: llm-execution-contract.yaml  verification-instructions-tracker.qmd  verification-workbook.qmd  verifier-preferences.yaml
tests/: test_bibliography_sync.py  test_execute_search_script_errors.py  test_rwa_chat_parser.py  test_search_runners.py
(+10 files in other folders)
