[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-workflow-assistant"
version = "2026.04.06"
description = "AI-powered research workflow assistant with MCP servers for academic database access, ICMJE-compliant"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "André van Zyl"},
]
keywords = ["research", "systematic-review", "mcp", "pubmed", "zotero", "quarto", "icmje"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/andre-inter-collab-llc/research-workflow-assistant"
Repository = "https://github.com/andre-inter-collab-llc/research-workflow-assistant"
Issues = "https://github.com/andre-inter-collab-llc/research-workflow-assistant/issues"
Discussions = "https://github.com/andre-inter-collab-llc/research-workflow-assistant/discussions"
Changelog = "https://github.com/andre-inter-collab-llc/research-workflow-assistant/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/research_workflow_assistant"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "mcp-servers"]
