[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bibliography-manager"
version = "0.1.0"
description = "MCP server for local bibliography management without Zotero"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rwa-shared",
]

[project.scripts]
bibliography-manager = "bibliography_manager:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/bibliography_manager"]
