[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossref-server"
version = "0.1.0"
description = "MCP server for CrossRef REST API (DOI metadata and verification)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
crossref-server = "crossref_server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/crossref_server"]
