[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "europe-pmc-server"
version = "0.1.0"
description = "MCP server for Europe PMC REST API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
europe-pmc-server = "europe_pmc_server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/europe_pmc_server"]
