[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openalex-server"
version = "0.1.0"
description = "MCP server for OpenAlex academic database"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
openalex-server = "openalex_server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/openalex_server"]
