[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prisma-tracker"
version = "0.1.0"
description = "MCP server for local PRISMA flow diagram tracking"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
prisma-tracker = "prisma_tracker:serve"
