[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-tracker"
version = "0.1.0"
description = "MCP server for research project management and progress tracking"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
project-tracker = "project_tracker:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/project_tracker"]
