[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-scholar-server"
version = "0.1.0"
description = "MCP server for Semantic Scholar Academic Graph API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rwa-shared>=0.2.0",
]

[project.scripts]
semantic-scholar-server = "semantic_scholar_server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_scholar_server"]
